[gd_scene load_steps=31 format=1]

[ext_resource path="res://scripts/giant.gd" type="Script" id=1]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_1_idle.tex" type="Texture" id=2]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_1_idle_right.tex" type="Texture" id=3]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_jump1.tex" type="Texture" id=4]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_jump1_right.tex" type="Texture" id=5]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_jump2.tex" type="Texture" id=6]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_jump2_right.tex" type="Texture" id=7]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_smashing.tex" type="Texture" id=8]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_smashing_right.tex" type="Texture" id=9]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_smashing2.tex" type="Texture" id=10]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_smashing2_right.tex" type="Texture" id=11]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_dying1.tex" type="Texture" id=12]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_dying2.tex" type="Texture" id=13]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_dying3.tex" type="Texture" id=14]
[ext_resource path="res://textures/enemies/basic_enemies/Giant/Giant_dying4.tex" type="Texture" id=15]
[ext_resource path="res://textures/hero/item_bar_under.tex" type="Texture" id=16]
[ext_resource path="res://textures/hero/item_bar_progress.tex" type="Texture" id=17]
[ext_resource path="res://sounds/257635__bananaboatman33__demon-giant-howl.smp" type="Sample" id=18]
[ext_resource path="res://sounds/76959__michel88__deathe.smp" type="Sample" id=19]
[ext_resource path="res://sounds/370036__punisherman__grunt.smp" type="Sample" id=20]
[ext_resource path="res://sounds/76187__movingplaid__concrete-step-1.smp" type="Sample" id=21]
[ext_resource path="res://scenes/game_hero/enemies/coin_fountain.tscn" type="PackedScene" id=22]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 44, 44 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]

resource/name = "death"
length = 0.85
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.3, 0.45 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.45, 0.55, 0.65, 0.75, 0.85 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.7, 0.5, 0.2, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.15, 0.45 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7.47559, -56.6694 ), Vector2( -5.84662, -31.4198 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 2, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -9, -65 ), Vector2( -42, -76 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 3, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -65 ), Vector2( 42, -76 ) ]
}

[sub_resource type="Animation" id=6]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 8, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -31, -65 ), Vector2( 8, -64 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 9, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, -62 ), Vector2( -10, -63 ) ]
}

[sub_resource type="SampleLibrary" id=8]

samples/257635__bananaboatman33__demon-giant-howl = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/death = {
"db": 0.0,
"pitch": 0.75,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/grunt = {
"db": 0.0,
"pitch": 0.5,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/move = {
"db": 0.0,
"pitch": 0.5,
"priority": 0,
"sample": ExtResource( 21 )
}

[node name="Giant" type="KinematicBody2D" groups=[
"enemies",
]]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/pos = Vector2( -5.84662, -31.4198 )
frames = SubResource( 2 )
animation = "default"
frame = 13

[node name="Death_Anim" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/death = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Movement_anims" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/about_to_move = SubResource( 4 )
anims/about_to_move_right = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextureProgress" type="TextureProgress" parent="AnimatedSprite"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -59.0
margin/top = -110.0
margin/right = 41.0
margin/bottom = -100.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 16 )
texture/over = null
texture/progress = ExtResource( 17 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="smash" type="AnimationPlayer" parent="AnimatedSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/smash = SubResource( 6 )
anims/smash_right = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]

enabled = true
cast_to = Vector2( 200, 0 )
layer_mask = 1
type_mask = 2

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 8 )
config/pitch_random = 0.0

[node name="Particles2D" parent="." instance=ExtResource( 22 )]

[connection signal="finished" from="AnimatedSprite/Death_Anim" to="." method="_on_Death_Anim_finished"]

[connection signal="finished" from="AnimatedSprite/Movement_anims" to="." method="_on_Movement_anims_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


